Fixing footer alignment

--- a/zvu/static/css/styles.css
+++ b/zvu/static/css/styles.css
@@ -5,6 +5,15 @@
   padding: 200px;
 }
 
+/* Footer fix */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
 /*!
 * Start Bootstrap - Scrolling Nav v5.0.5 (https://startbootstrap.com/template/scrolling-nav)
 * Copyright 2013-2022 Start Bootstrap
@@ -84,6 +93,7 @@
 
 body {
   margin: 0;
+  margin-bottom: 60px;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -11301,6 +11311,8 @@ textarea.form-control-lg {
 }
 html {
   scroll-padding-top: 3.5rem;
+  position: relative;
+  min-height: 100%;
 }
 
 header {
